updated css to ensure button text wraps when it is too long

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ p {
     width: 100%;
     overflow: hidden;
     text-overflow: clip;
+    white-space: normal;
 }
 
 /* navigation style */
